Added many projects

--- a/404.html
+++ b/404.html
@@ -3,12 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+
     <title>404 Not Found</title>
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="404.css">
-    <link rel="stylesheet" href="../base.css">
-    <link rel="stylesheet" href="../404.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #1e1e2e;
+    color: #ddd;
+    padding: 20px;
+    text-align: center;
+    }
+    .container {
+        padding: 50px;
+    }
+    h1 {
+        font-size: 100px;
+        color: #a68ab7;
+        margin: 0;
+    }
+    a {
+        color: #c092f5;
+        text-decoration: none;
+    }
+    a:hover {
+        color: #884eca;
+        text-decoration: underline;
+    }
+    header {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .hidden {
+        display: none;
+        max-width: 0px;
+        max-height: 0px;
+        position: absolute;
+    }
+
+    footer {
+        text-align: center;
+        margin-top: 50px;
+        font-size: 14px;
+        color: #777;
+    }
+
+    footer a {
+        text-decoration: none;
+        font-size: 20px;
+        margin-right: 10px;
+        margin-bottom: 5px;
+        color: #777;
+    }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,7 +71,8 @@
             <p>Here are some helpful links instead:</p>
             <a href="/">Home</a> |
             <a href="/about">About Me</a> |
-            <a href="/contact">Contact</a>
+            <a href="/contact">Contact</a> |
+            <a href="/Miscellaneous">Miscellaneous</a>
         </div>
     </div>
 
