--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+
     <title>Bas de Reus - Miscellaneous Projects</title>
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="projects.css">
@@ -19,7 +25,7 @@
     <div id="navbar-placeholder"></div>
 
     <section class="intro">
-        <p class="intro-text">Here are some smaller and experimental projects. These are not as large as my main ones on the home page, but still worth exploring. Feel free to check them out, as they link to external sites such as GitHub repos or itch.io pages.<br>Most of them are gamejams, perhaps there is a good reason behind that? Hint: duration.</p>
+        <p class="intro-text">Here are some smaller, older, and experimental projects. These are not as large as my main ones on the home page, but still worth exploring. Feel free to check them out, as they link to external sites such as GitHub repos or itch.io pages.<br>Most of them are gamejams, perhaps there is a good reason behind that? Hint: duration.</p>
     </section>
 
     <section class="filter">
