--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+    
     <title>Bas de Reus - Contact</title>
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="contact.css">
@@ -22,21 +28,23 @@
             <h2>Get in Touch</h2><br>
             <ul class="contact-list">
                 <li>
+                    <!-- Check links before appling for jobs -->
+
                     <i class="fas fa-file-alt"></i> 
-                    <strong>CV: </strong> 
-                    <a href="CV - English.pdf" download> Download CV ENG</a>
+                    <strong>CV: </strong>
+                    <a href="CV - English.pdf" target="_blank">CV ENG</a>
                     <span style="margin-left: 5px;">|</span>
-                    <a href="CV.pdf" download> Download CV NL</a>
+                    <a href="CV.pdf" target="_blank">CV NL</a>
                 </li>
                 <li>
                     <i class="fas fa-envelope"></i> 
                     <strong>Email: </strong> 
-                    <a href="mailto:bas@example.com">dereusbas461@gmail.com</a>
+                    <a href="mailto:bas@example.com" target="_blank">dereusbas461@gmail.com</a>
                 </li>
                 <li>
                     <i class="fab fa-linkedin"></i> 
                     <strong>Linkedin: </strong> 
-                    <a href="https://www.linkedin.com/in/bas-de-reus">linkedin.com/in/bas-de-reus</a>
+                    <a href="https://www.linkedin.com/in/bas-de-reus" target="_blank">linkedin.com/in/bas-de-reus</a>
                 </li>
                 <li>
                     <i class="fab fa-github"></i> 
