--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+
+    <meta name="twitter:title" content="Bas de Reus - Portfolio">
+    <meta name="twitter:description" content="Check out my latest game development projects and skills.">
+    <meta name="twitter:image" content="Covers/Platypus.png">
+
     <title>Bas de Reus</title>
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="projects.css">
@@ -20,11 +30,10 @@
 
     <section class="highlight-project">
         <a href="/Projects/CaptureGraafsmeer" class="highlight-container">
-            <!-- remove blur ater project done -->
-            <img src="Covers/CaptureGraafsmeer.png" alt="Highlight Project" style="filter: blur(1.5px) saturate(0.5);">
+            <img src="Covers/CaptureGraafsmeer.png" alt="Highlight Project">
             <div class="highlight-info">
                 <h2>Capture Graafsmeer</h2>
-                <p>Unity GPS mobile game made during MBO exam. Made for the Amsterdam goverment, explore the city with a photobook.</p>
+                <p>Unity GPS mobile game made during MBO exam. Made for the City of Amsterdam, explore the city with a photobook.</p>
                 <div class="tags">
                     <span class="tag tag-new">New</span>
                     <span class="tag tag-3d">3D</span>
