--- a/navbar.html
+++ b/navbar.html
@@ -9,18 +9,19 @@
         <li class="dropdown">
             <a href="#">Projects</a>
             <ul class="dropdown-content">
+                <li><a href="../Miscellaneous">Miscellaneous projects</a></li>
                 <li><a href="../Projects/CaptureGraafsmeer">Capture Graafsmeer</a></li>
-                <li><a href="../Projects/project">Maze Generator</a></li>
-                <li><a href="../Projects/project">Platypus</a></li>
-                <li><a href="../Projects/project">FPS Manager</a></li>
-                <!-- <li><a href="../Projects/project copy">Weather Visualizer</a></li> -->
+                <li><a href="../underconstruction">Maze Generator</a></li>
+                <li><a href="../underconstruction">Catch Space Trash</a></li>
+                <li><a href="../underconstruction">Platypus</a></li>
+                <li><a href="../underconstruction">FPS Manager</a></li>
                 <li><a href="../Projects/OperationStarfall">Operation Starfall</a></li>
-                <li><a href="../Projects/project">Smoll Knight + Horse</a></li>
+                <li><a href="../Projects/OperationStarfall">Kat-astrofe</a></li>
+                <li><a href="../underconstruction">Smoll Knight + Horse</a></li>
                 <li><a href="../Projects/Kara-oke">Kara-oké</a></li>
                 <li><a href="../Projects/project">The Lost Reel</a></li>
-                <li><a href="../Projects/project">AR Gpal</a></li>
-                <li><a href="../Projects/project">InControl</a></li>
-                <li><a href="../Miscellaneous">Miscellaneous projects</a></li>
+                <li><a href="../Projects/AR-Gpal">AR Gpal</a></li>
+                <li><a href="../Projects/InControl">InControl</a></li>
             </ul>
         </li>
     </ul>
