--- a/Projects/TheLostReel.html
+++ b/Projects/TheLostReel.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing The Lost Reel project.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+    
     <title>Bas de Reus: The Lost Reel</title>
+
     <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="projectpage.css">
+    <link rel="stylesheet" href="QuickMenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -15,6 +22,8 @@
     <header id="project-header"></header>
     <div id="navbar-placeholder"></div>
     <div id="project-info"></div>
+    <button id="back-to-top" class="back-to-top" onclick="scrollToTop()">↑ Back to Top</button>
+    <div id="quick-menu"></div>
     <div id="project-features"></div>
     <div id="footer-placeholder"></div>
 
