--- a/underconstruction.html
+++ b/underconstruction.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
+    <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
+    <meta name="author" content="Bas de Reus">
+
     <title>Under Construction</title>
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="underconstruction.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -19,7 +25,8 @@
             <p>Meanwhile, you can visit:</p>
             <a href="/">Home</a> |
             <a href="/about">About Me</a> |
-            <a href="/contact">Contact</a><br><br><br>
+            <a href="/contact">Contact</a> |
+            <a href="/Miscellaneous">Miscellaneous</a><br><br><br>
             <p>The project could be found on the old version:</p>
             <a href="https://www.bas-de-reus.nl/Old/All-Projects#new">Old website</a>
         </div>
