Added alot of projects and favorite features

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 <li>
                     <i class="fas fa-envelope"></i> 
                     <strong>Email: </strong> 
-                    <a href="mailto:bas@example.com" target="_blank">dereusbas461@gmail.com</a>
+                    <a href="mailto:dereusbas461@gmail.com" target="_blank">dereusbas461@gmail.com</a>
                 </li>
                 <li>
                     <i class="fab fa-linkedin"></i> 
