--- a/navbar.html
+++ b/navbar.html
@@ -11,9 +11,9 @@
             <ul class="dropdown-content">
                 <li><a href="../Miscellaneous">Miscellaneous projects</a></li>
                 <li><a href="../Projects/CaptureGraafsmeer">Capture Graafsmeer</a></li>
-                <li><a href="../underconstruction">Maze Generator</a></li>
+                <li><a href="../Projects/MazeGenerator">Maze Generator</a></li>
                 <li><a href="../underconstruction">Catch Space Trash</a></li>
-                <li><a href="../underconstruction">Platypus</a></li>
+                <li><a href="../Projects/Platypus">Platypus</a></li>
                 <li><a href="../underconstruction">FPS Manager</a></li>
                 <li><a href="../Projects/OperationStarfall">Operation Starfall</a></li>
                 <li><a href="../Projects/OperationStarfall">Kat-astrofe</a></li>
@@ -24,5 +24,6 @@
                 <li><a href="../Projects/InControl">InControl</a></li>
             </ul>
         </li>
+        <li><a href="/favoriteFeatures">Favorite Features</a></li>
     </ul>
 </nav>
