--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <!-- footer.html -->
 <footer>
-    <a href="https://github.com/bas-boop" class="fab fa-github"></a> 
-    <a href="https://baz-geluk9.itch.io/" class="fab fa-itch-io"></a>
-    <a href="https://www.linkedin.com/in/bas-de-reus/" class="fab fa-linkedin"></a>
+    <a href="https://github.com/bas-boop" target="_blank" class="fab fa-github"></a> 
+    <a href="https://baz-geluk9.itch.io/" target="_blank" class="fab fa-itch-io"></a>
+    <a href="https://www.linkedin.com/in/bas-de-reus/" target="_blank" class="fab fa-linkedin"></a>
     <p>&copy; 2024 Bas de Reus</p>
 </footer>
