Applied dry to project.js & facts button on aboutme page

--- a/navbar.html
+++ b/navbar.html
@@ -14,12 +14,9 @@
                 <li><a href="../Projects/MazeGenerator">Maze Generator</a></li>
                 <li><a href="../underconstruction">Catch Space Trash</a></li>
                 <li><a href="../Projects/Platypus">Platypus</a></li>
-                <li><a href="../underconstruction">FPS Manager</a></li>
                 <li><a href="../Projects/OperationStarfall">Operation Starfall</a></li>
-                <li><a href="../Projects/OperationStarfall">Kat-astrofe</a></li>
-                <li><a href="../underconstruction">Smoll Knight + Horse</a></li>
+                <li><a href="../underconstruction">Kat-astrofe</a></li>
                 <li><a href="../Projects/Kara-oke">Kara-oké</a></li>
-                <li><a href="../Projects/project">The Lost Reel</a></li>
                 <li><a href="../Projects/AR-Gpal">AR Gpal</a></li>
                 <li><a href="../Projects/InControl">InControl</a></li>
             </ul>
