--- a/underconstruction.html
+++ b/underconstruction.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Covers/Ximage.png">
     
     <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
     <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
@@ -26,9 +27,11 @@
             <a href="/">Home</a> |
             <a href="/about">About Me</a> |
             <a href="/contact">Contact</a> |
-            <a href="/Miscellaneous">Miscellaneous</a><br><br><br>
+            <a href="/Miscellaneous">Miscellaneous</a>
+            
+            <!-- <br><br><br>
             <p>The project could be found on the old version:</p>
-            <a href="https://www.bas-de-reus.nl/Old/All-Projects#new">Old website</a>
+            <a href="https://www.bas-de-reus.nl/Old/All-Projects#new">Old website</a> -->
         </div>
     </div>
 
