--- a/Projects/Kara-oke.html
+++ b/Projects/Kara-oke.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="../Covers/Ximage.png">
     
     <meta name="description" content="Bas de Reus - Game Developer, showcasing Kara-oké project.">
     <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
