--- a/Projects/MazeGenerator.html
+++ b/Projects/MazeGenerator.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="../Covers/Ximage.png">
     
     <meta name="description" content="Bas de Reus - Game Developer, showcasing perfect Maze Generator project.">
     <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
@@ -26,7 +27,7 @@
     <div id="quick-menu"></div>
     <div id="project-features"></div>
     <div id="footer-placeholder"></div>
-
+    
     <script src="../HtmlFetcher.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
