--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="Covers/Ximage.png">
     
     <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
     <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
@@ -68,6 +69,9 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
         <div class="image-content">
             <img src="MijnFoto.jpg" alt="Photo of me" class="profile-photo">
             <img src="Podium.png" alt="Photo of me on stage" class="profile-photo-stage">
+
+            <button id="fact-button">Randomized fun fact!</button>
+            <p id="fact-display" style="margin-top: 10px; font-size: 1.2em; font-weight: bold;"></p>
         </div>
     </div>
 
@@ -238,5 +242,6 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
 
     <script src="HtmlFetcher.js"></script>
     <script src="DateCalculator.js"></script>
+    <script src="about.js"></script>
 </body>
 </html>
