--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="Covers/Ximage.png">
     
     <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
     <meta name="keywords" content="Bas de Reus, Game Developer, Unity, C#, C++, HTML/CSS/JS">
@@ -34,54 +35,11 @@
         <div class="highlight-slider">
             <button class="slider-arrow left-arrow" aria-label="Previous Project">&lt;</button>
             
-            <div class="highlight-slides">
-                <a href="/Projects/CaptureGraafsmeer" class="highlight-container">
-                    <img src="Covers/CaptureGraafsmeer.png" alt="Capture Graafsmeer">
-                    <div class="highlight-info">
-                        <h2>Capture Graafsmeer</h2>
-                        <p>Unity GPS mobile game made during MBO exam. Made for the City of Amsterdam, explore the city with a photobook.</p>
-                        <div class="tags">
-                            <span class="tag tag-play">Play now</span>
-                            <span class="tag tag-3d">3D</span>
-                            <span class="tag tag-engine">Unity</span>
-                            <span class="tag tag-lang">C#</span>
-                            <span class="tag">Mobile</span>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="/Projects/Platypus" class="highlight-container">
-                    <img src="Covers/Platypus.png" alt="Platypus">
-                    <div class="highlight-info">
-                        <h2>Platypus</h2>
-                        <p>This is a passion project of mine. A platformer with interesting movement options.</p>
-                        <div class="tags">
-                            <span class="tag tag-2d">2D</span>
-                            <span class="tag tag-engine">Unity</span>
-                            <span class="tag tag-lang">C#</span>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="/Projects/Kara-oke" class="highlight-container">
-                    <img src="Covers/Kara-oke.png" alt="Kara-oke">
-                    <div class="highlight-info">
-                        <h2>Kara-oké</h2>
-                        <p>A VR karaoke game commissioned for AVROTROS, this was made during my internship at XR-Lab!</p>
-                        <div class="tags">
-                            <span class="tag tag-3d">3D</span>
-                            <span class="tag tag-engine">Unity</span>
-                            <span class="tag tag-lang">C#</span>
-                            <span class="tag">XR</span>
-                            <span class="tag">Internship</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <div class="highlight-slides"></div>
 
             <button class="slider-arrow right-arrow" aria-label="Next Project">&gt;</button>
         </div>
-    </section>    
+    </section>
 
     <section class="filter">
         <label for="tag-filter">Filter by:</label>
@@ -96,10 +54,10 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="Index.js"></script>
     <script src="HtmlFetcher.js"></script>
     <script src="TagFilter.js"></script>
     <script src="ProjectsData.js"></script>
     <script src="Projects.js"></script>
+    <script src="Index.js"></script>
 </body>
 </html>
