--- a/Projects/Kara-oke.html
+++ b/Projects/Kara-oke.html
@@ -37,6 +37,7 @@
     <script>hljs.highlightAll();</script>
     <script src="karaoke.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../Tooltip.js"></script>
     <script>
         document.querySelector('.clickable-crab').addEventListener('click', () => {
             alert('You found the crab! 🦀\nWhen playing the game there are 5 hidden crabs to find.');
