--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <h2>Why I Make Games</h2>
                 <p>
                     I enjoy creating games because I want to give others the same sense of enjoyment that games have given me. This passion is why I became a game developer. I particularly enjoy working on gameplay features and systems.
-                    <br><br>I have extensive experience with Unity and C#, as shown on the <a href="index" class="link">home page</a>, but I am also broadening my skills by exploring other game engines like <a href="https://godotengine.org/" target="_blank" class="link">Godot</a>. In addition to development, I enjoy taking on leadership roles in projects. I have frequently served as a <highlight-text>Lead Developer</highlight-text> or <highlight-text>Scrum Master</highlight-text>.
+                    <br><br>I have extensive experience with Unity and C#, as shown on the <a href="index" class="link">home page</a>, but I am also broadening my skills by exploring other game engines like <custom-tooltip tooltip="Godot Engine, the free and open source community-driven 2D and 3D game engine!">Godot</custom-tooltip>. In addition to development, I enjoy taking on leadership roles in projects. I have frequently served as a <highlight-text>Lead Developer</highlight-text> or <highlight-text>Scrum Master</highlight-text>.
                 </p>
             </section>
             
@@ -87,7 +87,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>First public game</h3>
-                    <p>This is a simple game created as part of my application to an MBO college. It was also the first game I publicly released, rather than keeping it as a private project. The game was made during Halloween, which inspired the theme: players control a sentient, walking sword with the goal of catching pumpkins falling from the sky.</p>
+                    <p>This is a simple game created as part of my application to an <custom-tooltip tooltip="MBO is a school niveau that is in between highschool and bachelor">MBO</custom-tooltip> college. It was also the first game I publicly released, rather than keeping it as a private project. The game was made during Halloween, which inspired the theme: players control a sentient, walking sword with the goal of catching pumpkins falling from the sky.</p>
                     <a href="https://scratch.mit.edu/projects/345766347/" target="_blank" class="link">Play game</a>
                 </div>
             </div>
@@ -126,7 +126,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>First gamejam</h3>
-                    <p>After completing a few more projects, I decided to organize a game jam for fun. I invited some friends and classmates to participate, challenging ourselves to create small games in just one week. For my entry, I made a simple game about fruit dodging cutlery while collecting items. This project marked my first experience working with JSON, which I used to store the player's selection.</p>
+                    <p>After completing a few more projects, I decided to organize a <custom-tooltip tooltip="A game jam is competition to make a game in a short amount of time. This will probably have a theme to work with.">game jam</custom-tooltip> for fun. I invited some friends and classmates to participate, challenging ourselves to create small games in just one week. For my entry, I made a simple game about fruit dodging cutlery while collecting items. This project marked my first experience working with JSON, which I used to store the player's selection.</p>
                     <a href="https://github.com/bas-boop/HUGJ2022P1-Voedelstjes" target="_blank" class="link">Play game</a>
                 </div>
             </div>
@@ -135,7 +135,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>Neon origns</h3>
-                    <p>This is where I truly honed my skills in game development. During this experience, I began to fully understand the tools and techniques I was using. Previously, my approach was to make things work and move on; here, I learned to make things work and improve them—whether through cleaner code, better gameplay, or enhanced visuals. Much of what I do today stems from what I learned during this time.</p>
+                    <p>Neon origns is an <custom-tooltip tooltip="Hybrid learning environment is a fusion of school and real work, similar to internship. Here students get the chance to make quality. HLO stand for the dutch translation: Hybride leeromgeving.">hybrid learning environment (HLO)</custom-tooltip>, this is where I truly honed my skills in game development. During this experience, I began to fully understand the tools and techniques I was using. Previously, my approach was to make things work and move on; here, I learned to make things work and improve them—whether through cleaner code, better gameplay, or enhanced visuals. Much of what I do today stems from what I learned during this time.</p>
                     <a href="https://www.neonorigins.com/" target="_blank" class="link">Neon Origns website</a> |
                     <a href="https://www.bas-de-reus.nl/Projects/OperationStarfall" target="_blank" class="link">My contributions</a>
                 </div>
@@ -158,7 +158,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>XR-Lab internship</h3>
-                    <p>My first internship in game development was at XR-Lab, where we focused on XR projects using technologies like virtual reality (VR), augmented reality (AR), and mixed reality (MR). I worked on two key projects: a VR karaoke game for the TV network AVROTROS, translating their show "Beste Zangers" into an immersive VR environment, and an AR reimagination of an existing app/web app for the client Gpal. This project aimed to make education and training for blue-collar workers more engaging and enjoyable.</p>
+                    <p>My first internship in game development was at XR-Lab, where we focused on XR projects using technologies like virtual reality (VR), augmented reality (AR), and mixed reality (MR). I worked on two key projects: a VR karaoke game for the TV network AVROTROS, translating their show <custom-tooltip tooltip="Each episode the singer will cover their own songs and sing for each other.">"Beste Zangers"</custom-tooltip> into an immersive VR environment, and an AR reimagination of an existing app/web app for the client Gpal. This project aimed to make education and training for blue-collar workers more engaging and enjoyable.</p>
                     <a href="https://www.xr-lab.nl/" target="_blank" class="link">XR-Lab website</a> |
                     <a href="https://www.bas-de-reus.nl/Projects/Kara-oke" target="_blank" class="link">VR project</a> |
                     <a href="https://www.bas-de-reus.nl/Projects/AR-Gpal" target="_blank" class="link">AR project</a>
@@ -212,7 +212,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>MBO exames</h3>
-                    <p>In the final semester of my MBO education, the exam project was the last hurdle before earning my diploma. I assembled a powerhouse team of artists and developers to create the best possible game for this exam. We had the opportunity to work with either two real game companies or the City of Amsterdam. After the draw, we were selected to work with the City of Amsterdam, who requested an unusual project. The goal was to develop a mobile game that would allow users to explore the area around the office in Amsterdam in a fun and educational way.</p>
+                    <p>In the final semester of my MBO education, the exam project was the last hurdle before earning my diploma. I assembled a powerhouse team of artists and developers to create the best possible game for this exam. We had the opportunity to work with either <custom-tooltip tooltip="These 2 where Paladin Studios and Linx Interactive. Game companies located in The Netherlands.">two real game companies</custom-tooltip> or the City of Amsterdam. After the draw, we were selected to work with the City of Amsterdam, who requested an unusual project. The goal was to develop a mobile game that would allow users to explore the area around the office in Amsterdam in a fun and educational way.</p>
                     <a href="https://www.bas-de-reus.nl/Projects/CaptureGraafsmeer" target="_blank" class="link">Exam project</a>
                 </div>
             </div>
@@ -241,6 +241,7 @@ I tend to gravitate towards building and simulation games, like <highlight-text>
     <div id="footer-placeholder"></div>
 
     <script src="HtmlFetcher.js"></script>
+    <script src="Tooltip.js"></script>
     <script src="DateCalculator.js"></script>
     <script src="about.js"></script>
 </body>
