--- a/favoriteFeatures.html
+++ b/favoriteFeatures.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Covers/Ximage.png">
+    
     <title>Bas de Reus: Favorite Features</title>
 
     <meta name="description" content="Bas de Reus - Game Developer, showcasing projects and skills in game development.">
@@ -34,6 +36,7 @@
     <div id="footer-placeholder"></div>
 
     <script src="HtmlFetcher.js"></script>
+    <script src="Tooltip.js"></script>
     <script src="favoriteFeatures.js"></script>
 </body>
 </html>
