--- a/Projects/AR-Gpal.html
+++ b/Projects/AR-Gpal.html
@@ -29,6 +29,7 @@
     <div id="footer-placeholder"></div>
 
     <script src="../HtmlFetcher.js"></script>
+    <script src="../Tooltip.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
     <script src="ar-Gpal.js"></script>
