--- a/Projects/CaptureGraafsmeer.html
+++ b/Projects/CaptureGraafsmeer.html
@@ -93,6 +93,7 @@
     <div id="footer-placeholder"></div>
 
     <script src="../HtmlFetcher.js"></script>
+    <script src="../Tooltip.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
