--- a/contact.html
+++ b/contact.html
@@ -74,5 +74,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="HtmlFetcher.js"></script>
+    <script src="Tooltip.js"></script>
 </body>
 </html>
