--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="tags.css">
+    <link rel="stylesheet" href="tool.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -41,12 +42,19 @@
         </div>
     </section>
 
+    <hr>
+
+    <section class="tool-section">
+    <h2 class="tool-header">Experience in Tools</h2>
+    <div class="tool-container" id="toolList"></div>
+    </section>
+    
+    <hr>
+
     <section class="filter">
         <label for="tag-filter">Filter by:</label>
         <select id="tag-filter"></select>
     </section>
-
-    <hr>
 
     <section class="portfolio">
         <div class="project-container" id="project-container"></div>
