Automaded many things

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -42,9 +42,10 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="HtmlFetcher.js"></script>
-    <script src="TagFilter.js"></script>
+    <script src="ProjectsData.js"></script>
     <script src="SmallProjectsData.js"></script>
     <script src="Projects.js"></script>
+    <script src="HtmlFetcher.js"></script>
+    <script src="TagFilter.js"></script>
 </body>
 </html>
