--- a/Projects/AR-Gpal.html
+++ b/Projects/AR-Gpal.html
@@ -34,5 +34,6 @@
     <script>hljs.highlightAll();</script>
     <script src="ar-Gpal.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
