--- a/Projects/Kara-oke.html
+++ b/Projects/Kara-oke.html
@@ -43,5 +43,6 @@
             alert('You found the crab! 🦀\nWhen playing the game there are 5 hidden crabs to find.');
         });
     </script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
