--- a/Projects/Platypus.html
+++ b/Projects/Platypus.html
@@ -28,11 +28,13 @@
     <div id="project-features"></div>
     <div id="footer-placeholder"></div>
 
+    <script src="../ProjectsData.js"></script>
     <script src="../HtmlFetcher.js"></script>
     <script src="../Tooltip.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
     <script src="platypus.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
