--- a/favoriteFeatures.html
+++ b/favoriteFeatures.html
@@ -35,6 +35,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script src="ProjectsData.js"></script>
     <script src="HtmlFetcher.js"></script>
     <script src="Tooltip.js"></script>
     <script src="favoriteFeatures.js"></script>
