--- a/underconstruction.html
+++ b/underconstruction.html
@@ -37,6 +37,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script src="ProjectsData.js"></script>
     <script src="HtmlFetcher.js"></script>
 </body>
 </html>
