--- a/Projects/CaptureGraafsmeer.html
+++ b/Projects/CaptureGraafsmeer.html
@@ -101,5 +101,6 @@
     <script>hljs.highlightAll();</script>
     <script src="captureGraafsmeer.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
