--- a/Projects/InControl.html
+++ b/Projects/InControl.html
@@ -34,5 +34,6 @@
     <script>hljs.highlightAll();</script>
     <script src="inControl.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
