--- a/Projects/MazeGenerator.html
+++ b/Projects/MazeGenerator.html
@@ -33,5 +33,6 @@
     <script>hljs.highlightAll();</script>
     <script src="mazeGenerator.js"></script>
     <script src="createProjectContent.js"></script>
+    <script src="../ProjectsData.js"></script>
 </body>
 </html>
