--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script src="ProjectsData.js"></script>
     <script src="HtmlFetcher.js"></script>
     <script src="Tooltip.js"></script>
 </body>
