Added Codename-C page + tools

--- a/Projects/CaptureGraafsmeer.html
+++ b/Projects/CaptureGraafsmeer.html
@@ -14,6 +14,7 @@
     
     <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" href="../underconstruction.css">
     <link rel="stylesheet" href="projectpage.css">
     <link rel="stylesheet" href="QuickMenu.css">
     <link rel="stylesheet" href="PlayTest.css">
@@ -24,7 +25,16 @@
     <header id="project-header"></header>
     <div id="navbar-placeholder"></div>
     
+    <div class="construction-container">
+        <h1>🚧 Under Construction 🚧</h1>
+        <p>Sorry for the inconvenience, but this page is currently being built. Not everything is done!</p>
+        <div class="progress-bar">
+            <div class="progress-fill"></div>
+        </div>
+    </div>
+
     <div id="project-info"></div>
+
     <hr>
     <section id="playtesting">
         <div class="section-header">
