--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
                 </p>
             </section>
             
-            <!-- <section class="Internship background-section">
+            <section class="Internship background-section">
                 <h2>Looking for an Internship</h2>
                 <p>As I continue my Bachelor of Creative Media and Game Technologies at HKU, <highlight-text>I’m seeking an internship</highlight-text> with a game development company where I can further develop my skills in building gameplay and developer features, just like my <a href="/Projects/CaptureGraafsmeer#Photobook-Custom-Window" class="link">custom window</a>. With a strong foundation in Unity and C# from my MBO diploma and 2 additional years at HKU, I’m excited to bring my experience to a professional team focused on creating engaging, high-quality games.
                     <br><br>I am especially interested in gaining hands-on experience with development deadlines. While I have extensive experience in programming and project development, I’m eager to grow my skills in navigating the fast-paced, deadline-driven environments of the industry. <highlight-text>Working with real timelines and milestones</highlight-text> will be an invaluable learning experience, and I am excited to adapt and meet the expectations that come with professional game development.
                     <br><br>While Unity is my primary tool, I am open to working with other engines and frameworks like Godot, Unreal, or MonoGame to broaden my expertise and learn new technologies. If you’re looking for an <highlight-text>intern who is dedicated, passionate, and ready to grow</highlight-text>, I’d love to <a href="contact" class="link">connect</a>!
                 </p>
-            </section> -->
+            </section>
 
             <section class="gaming background-section">
                 <h2>Gaming</h2>
