--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar">
     <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About Me</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
 
         <li class="dropdown">
@@ -12,7 +12,7 @@
             </ul>
         </li>
 
-        <li><a href="/favoriteFeatures">Favorite Features</a></li>
+        <li><a href="/features">Features</a></li>
     </ul>
 </nav>
 
