--- a/features.html
+++ b/features.html
@@ -17,17 +17,18 @@
 
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="FavoriteFeatures.css">
-    <link rel="stylesheet" href="navbar.css">    
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="tags.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>My Favorite Features</h1>
+        <h1>Highlighted Features</h1>
     </header>
     
     <div id="navbar-placeholder"></div>
 
-    <p class="intro-text">Here’s a collection of my favorite features that I’ve designed, developed, and implemented across various projects. Some link to other websites, which will open in a new tab.</p>
+    <p class="intro-text">Here’s a collection of my highlighted features that I’ve designed, developed, and implemented across various projects. Some link to other websites, which will open in a new tab.</p>
     
     <section class="features-section">
         <ul class="feature-list" id="feature-list"></ul>
